fix blue bg being too dark

--- a/src/assets/stylesheets/foundations/_base.scss
+++ b/src/assets/stylesheets/foundations/_base.scss
@@ -11,7 +11,7 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  background: rgba(_.get-colour('page.background'),.75);
+  background: rgba(_.get-colour('page.background'),.2);
 }
 
 body {
